Progetto JavaFx98 AlnaoPhotoDispatcher Creazione script e icona per esecuzione in gnome desktop